tests/expected_invalid_parse_grant_missing_body.diag.out
<input>:13:5: error: expected grant body block after permit binder
        use(as access)
        ^^^
